src/objects/Scheduled_Orchestration_Manager_Log__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Id__c</fullName>
        <label>Batch Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <label>Event Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Id__c</fullName>
        <label>Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <label>Timestamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Was_Successful__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Was Successful</label>
        <type>Checkbox</type>
    </fields>
    <label>Orchestration Manager Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Timestamp__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Event_Name__c</columns>
        <columns>Was_Successful__c</columns>
        <columns>Message__c</columns>
        <columns>Job_Id__c</columns>
        <columns>Batch_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Scheduled Orchestration Manager Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orchestration Manager Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>